[wheel]
universal=1

[metadata]
license_file = apache-2.0.LICENSE
name = fetchcode
author = nexB. Inc. and others
author_email = info@aboutcode.org
description = A library to reliably fetch code via HTTP, FTP and version control systems.
long_description = file:README.rst
url = https://github.com/nexB/fetchcode
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    attrs==19.3.0
    certifi==2019.11.28
    chardet==3.0.4
    idna==2.9
    importlib-metadata==1.5.0
    more-itertools==8.2.0
    packageurl-python==0.9.0
    packaging==20.1
    pathlib2==2.3.5
    pluggy==0.13.1
    py==1.8.1
    pyparsing==2.4.6
    pytest==5.3.5
    requests==2.23.0
    six==1.14.0
    urllib3==1.25.8
    wcwidth==0.1.8
    zipp==1.2.0
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    # pytest >= 6
    # pytest-xdist >= 2